[tool.poetry]
name = "menu"
version = "0.1.0"
description = ""
authors = ["v3l0c1r4pt0r <v3l0c1r4pt0r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argcomplete = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
m = "menu.__main__:main"
